@@ -1,6 +1,9 @@
 2009-12 Erwin Waterlander <waterlan@xs4all.nl>
 	* Added internationalisation using gettext.
 	* Added Dutch translation.
+	* Ported to Win32 using Mingw32 <http://www.mingw.org/>
+	* Ported to DOS using DJGPP <http://www.delorie.com/djgpp/>
+	* Fixed problem in DOS/Windows stdin/stdout mode.
 	* New option -L/--license that prints software license.
 	* Code cleanup
 	* Update manual
